# swodlr-hysds-integration

./: .gitignore  .gitmodules  README.md  bumpver.toml  pyproject.toml
.github/workflows/: build.yml
docker/: Dockerfile  hysds-io.json.notify_swodlr  job-spec.json.notify_swodlr
podaac/swodlr_hysds/: notify_swodlr.py
scripts/: build.sh
