[tool.poetry]
name = "swodlr-hysds-integration"
version = "0.0.5"
description = "SWODLR user rules for integration with SWODLR SDS deployments"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
exclude = ["docker", "tools"]
packages = [
  {include = "podaac/swodlr_hysds"}
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.56"
python-dotenv = "^1.0.1"
fastjsonschema = "^2.19.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
flake8 = "^7.0.0"
pytest = "^8.0.2"

[tool.poetry.scripts]
notify_swodlr = 'podaac.swodlr_hysds.notify_swodlr:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
